2013-01-18  Per Bothner  <per@bothner.com>

	* CatchClause.java (<init>): Set Declaration's initial value
	to undefined_exp, not voidExp.

2012-12-31  Charles Turner  <chturne@gmail.com>

	* Keyword.java: Re-formatted. Added more documentation.

2012-12-29  Per Bothner  <per@bothner.com>

	* ClassExp.java (compileMembers): Don't generate field for a get/set
	method if we already have a matching implementation method.

	* ClassExp.java (getImplMethods): New overloaded private method.
	Minor optimization - reuse Type[] for recursive calls.
	(getImplMethods): Change parameter type from Vector to ArrayList.
	* Compilation.java (callInitMethods): Likewise.

2012-12-22  Per Bothner  <per@bothner.com>

	* ChainLambdas.java (visitApplyExp): Silently allow explicit
	conversions from never-returns to any type.
	(visitLetExp): Check for initializers never returning.
	* InlineCalls.java (checkType): Don't complain if converting
	to (or from) neverReturnsType.

	* Special.java (kawaInternalError): Rename to ...
	(reachedUnexpected): new name, because it is now also used when casting
	to neverReturnsType, so can be throw from applications.
	* PrimProcedure.java (compileReachedUnexpected): New method.
	(compileInvoke): Use new compileReachedUnexpected method.

	* CheckedTarget.java (emitCheckedCoerce): Merge two overloads.
	Add stackType parameter.
	* LambdaExp.java (enterFunction): Pass stackType to emitCheckedCoerce,
	which can avoid wasted conversions - e.g. for #!rest parameters.
	* Compilation.java: Update to call modified emitCheckedCoerce method.

2012-12-16  Per Bothner  <per@bothner.com>

	* Compilation.java (PRE_WALKED): New constant.  Needed because we
	need PushAply to be done for all dependent modules before InlineCalls.
	(walkModule): Removed.  Inlined into process method.
	(process): Split PushApply into earlier pass.

	* Special.java (kawaInternalError): New Error constant.
	* PrimProcedure.java (compileInvoke): If the called method's return